--- a/style.css
+++ b/style.css
@@ -75,10 +75,10 @@
 
 }
 
+
 .contenedor-tasa h3 {
     text-align: center;
     text-transform: uppercase;
-    font-weight: bold;
 }
 
 .tasa {
@@ -87,6 +87,169 @@
     height: 40px;
     background-color: white;
     border-radius: 15px;
+    font-weight: bold;
 
 
+
+}
+@media screen and (max-width: 768px){
+    contenedor {
+        margin: auto;
+        border: 2px solid black;
+        text-align: center;
+        width: 100%;
+        font-family: 'Courier New', Courier, monospace;
+        background: #1f4037;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #99f2c8, #1f4037);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #99f2c8, #1f4037);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    }
+    .titulo {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        width: 100%;
+        text-align: center;
+
+    }
+    .contenedor-monedas {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: auto;
+        width: 100%;
+    }
+    
+    .contenedor-moneda-inter {
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        flex-direction: row;
+        width: 100%;
+        margin: 5px auto;
+        box-shadow: 10px 5px 15px 5px;
+    
+    }
+    .contenedor-dentro-monedas{
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+        width: 100%;
+        min-width: 78px;
+    }
+    .contenedor-dentro-monedas .moneda-inter{
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        width: 100%;
+    }
+    
+    .contenedor-dentro-monedas input {
+        display:block;
+        
+        border-radius: 15px;
+        width: 80%;
+        max-width: 100px;
+        min-width:50px;
+        margin: auto;
+        padding: 1px;
+        font-size: 10px;
+    }
+    .contenedor-dentro-monedas h2{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+        font-size: 15px;
+
+    }
+    
+    .contenedor-moneda-arg {
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        flex-direction: row;
+        width: 100%;
+        margin: 5px auto;
+        box-shadow: 10px 5px 15px 5px;
+    
+    }
+    .contenedor-dentro-pesos .moneda-arg{
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        width: 100%;
+    }
+    .contenedor-dentro-pesos{
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+        width: 100%;
+        min-width: 78px;
+    }
+    
+    .contenedor-dentro-pesos input {
+        display:block;
+        border-radius: 15px;
+        width: 100%;
+        max-width: 100px;
+        min-width:50px;
+        margin: auto;
+        padding: 1px;
+        font-size: 10px;
+    }
+    .contenedor-dentro-pesos h2{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+        font-size: 15px;
+
+    }
+    
+    
+    .contenedor-tasa {
+        border: 1px solid black;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 10px 5px 15px 5px;
+        margin: auto;
+        overflow: hidden;
+    
+    }
+    .contenedor-dentro-tasa{
+        display: block;
+        width: 80%;
+    }
+    
+    
+    .contenedor-dentro-tasa h3 {
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 15px;
+    }
+    
+    .tasa {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid rgb(114, 113, 113);
+        width: 40px;
+        height: 20px;
+        background-color: white;
+        border-radius: 15px;
+        margin: auto;
+        font-weight: bold;
+    
+    
+    }
 }
